# feature_extraction

./: .gitignore  CLAUDE.md  pyproject.toml  run_all_phases.sh
.claude/: settings.local.json
data/cleaned/: US9624268_cleaned.csv  sif_sgf_second_cleaned.csv
data/processed/: US20140294902A1_processed.csv  US9624268_processed.csv  US9809623B2_processed.csv  WO2017011820A2_processed.csv  sif_sgf_second_processed.csv
data/raw/: US20140294902A1.csv  US9809623B2.csv  WO2017011820A2.csv
docs/Visualization/: README.md
docs/dev/: Phase1_分子特征提取报告.md  Phase2_数据可视化报告.md  Phase3_模型验证报告.md  特征提取.md  项目进度.md
outputs/class_distribution/: class_distribution_summary.json
outputs/features/: US9624268_cleaned.npz  sif_sgf_second_cleaned.npz
outputs/figures/: visualization_summary.json
outputs/figures/phase1/: README.md
outputs/model_results/: MODEL_SUMMARY.md  MODEL_SUMMARY_ZH.md  PRELIMINARY_SUMMARY.md  PRELIMINARY_SUMMARY_ZH.md  QUICK_START.md  QUICK_START_ZH.md
outputs/model_results/cv_results/: US9624268_cleaned_SGF_cv_results.json  US9624268_cleaned_SGF_cv_summary.csv  US9624268_cleaned_SIF_cv_results.json  US9624268_cleaned_SIF_cv_summary.csv  sif_sgf_second_cleaned_SGF_cv_results.json  (+3 more)
scripts/: add_molecular_features.py  binary_classification.py  clean_csv_data.py  evaluate_transfer.py  extract_features.py  generate_phase3_report.py  phase1_visualize.py  train_models.py  visualize_data.py  visualize_model_results.py  visualize_phase3_results.py
src/feature_extraction/: __init__.py  featurizer.py  utils.py  visualization.py
(+184 files in other folders)
