[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature-extraction"
version = "0.1.0"
description = "用来实现对SIF/SGF稳定性的特征提取"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rdkit>=2023.3.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
]
